force-app/main/default/objects/Contact/fields/isMaxLoanAmount__c.field-meta.xml
<CustomField>
    <fullName>isMaxLoanAmount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isMaxLoanAmount</label>
    <type>Checkbox</type>
</CustomField>