force-app/main/default/objects/Contact/fields/Personal_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Personal_Email_1__c</fullName>
    <label>Personal Email 1</label>
    <type>Email</type>
</CustomField>