force-app/main/default/objects/Contact/fields/Personal_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Personal_Email_2__c</fullName>
    <label>Personal Email 2</label>
    <type>Email</type>
</CustomField>