force-app/main/default/objects/Contact/fields/Personal_Email_3__c.field-meta.xml
<CustomField>
    <fullName>Personal_Email_3__c</fullName>
    <label>Personal Email 3</label>
    <type>Email</type>
</CustomField>