force-app/main/default/objects/Contact/validationRules/Personal_Email_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Personal_Email_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISBLANK(Personal_Email_1__c ),ISBLANK(Personal_Email_3__c ),ISBLANK(Personal_Email_3__c ))</errorConditionFormula>
    <errorMessage>Personal Email should not be blank</errorMessage>
</ValidationRule>