force-app/main/default/objects/Contact/validationRules/Phone_Number_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_Length</fullName>
    <active>false</active>
    <errorConditionFormula>OR(ISBLANK(Phone),LEN(Phone)&lt;10)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Phone Number should be 10 digit</errorMessage>
</ValidationRule>